super admin update  functions